fixed the margin and padding

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
          <div class="parallax"> </div>
 
-<div class="container" id="About">
-
-            <h1>About</h1>
+<div class="container" >
+<div id="About">
+            <h4>About</h4>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
@@ -50,7 +50,7 @@
          <div class="about-parallax"> </div>
 
 <div id="Portfolio">
-        <h1>Portfolio</h1>
+        <h4>Portfolio</h4>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
@@ -67,7 +67,7 @@
 
 
 <div id="Contact">
-                <h1>Contact</h1>
+                <h4>Contact</h4>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
                 <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil quisquam alias, vero esse ex nesciunt, culpa tempore aperiam beatae corporis dolorum nostrum quidem laborum porro facere temporibus reiciendis sed aspernatur?</p>
@@ -80,7 +80,7 @@
 </div>
     
 
-
+</div>
 
 </body>
 </html>
