--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="top-home">
 
             <h1>Hi, I'm Fathia. </h1>
-            <h3> A Web Developer</h3>
+            <h3> dive into the Enlighted code of a Web Developer</h3>
             <div class="btn"><a  href="#">check out my work</a></div>
 
 </div>
