--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
 
                 <div class="div2">
                         <div class="project3">  
-                                <a href="http://the-fun-budget-tool.surge.sh/"> <img src="./img/fitnish.jpg" alt=""></a>
+                                <a href="http://the-fun-budget-tool.surge.sh/"> <img src="./img/expense-slider.png" alt=""></a>
                                 <h3>The Fun Budget Tool</h3>
 
                         </div>
 
                         <div class="project1">
-                                <a href="https://fathia123.github.io/GA-Project1/">  <img src="./img/plush.jpg" alt=""></a>
+                                <a href="https://fathia123.github.io/GA-Project1/">  <img src="./img/questionmark.jpg" alt=""></a>
                                 <h3>Trivia Game</h3>
                         </div>
                 </div>
