--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Profolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -26,11 +26,11 @@
 
 <div id="top-home">
 
-        <h1>Hi, I'm Fathia... </h1>
+        <h1 id="name">Hi, I'm Fathia... </h1>
         
         <div >
                 <!-- <button class="btn" onclick="myFunction()">About</button> -->
-                <div > <h3>I am an enthusiastic, hardworking, and driven full stack web developer,<br> who enjoys finding creative solutions for ordinary problems. <br>I incorporate teamwork, kindness, and generosity in everything I do.</h3></div>
+                <div > <h3>I am an enthusiastic, industrious, and driven full stack web developer,<br> who enjoys finding creative solutions for complex problems. <br>I incorporate teamwork, kindness, and generosity in everything I do.</h3></div>
         </div>
         <img src="./img/GA_02_-15.jpg" alt="">
 </div>
@@ -53,12 +53,12 @@
                 </div>
                   <div class="div1">
                         <div class="project2">
-                                <a href="https://project2connect.herokuapp.com/"><img src="./img/toa.jpg" alt=""> </a>
+                                <a href="https://project2connect.herokuapp.com/" target="_blank"><img src="./img/toa.jpg" alt=""> </a>
                                 <h4>Story Telling App</h4>
                         </div>
 
                         <div class="project4">
-                                <a href="http://who-represents-me.surge.sh/"><img src="./img/minimal.png" alt=""></a>
+                                <a href="http://who-represents-me.surge.sh/" target="_blank"><img src="./img/minimal.png" alt=""></a>
                                 <h4>Get to Know Your Representative</h4>
 
                         </div>
@@ -66,13 +66,13 @@
 
                 <div class="div2">
                         <div class="project3">  
-                                <a href="http://the-fun-budget-tool.surge.sh/"> <img src="./img/expense-slider.png" alt=""></a>
+                                <a href="http://the-fun-budget-tool.surge.sh/" target="_blank"> <img src="./img/expense-slider.png" alt=""></a>
                                 <h4>The Fun Budget Tool</h4>
 
                         </div>
 
                         <div class="project1">
-                                <a href="https://fathia123.github.io/GA-Project1/">  <img src="./img/questionmark.jpg" alt=""></a>
+                                <a href="https://fathia123.github.io/GA-Project1/" target="_blank">  <img src="./img/questionmark.jpg" alt=""></a>
                                 <h4>Trivia Game</h4>
                         </div>
                 </div>
@@ -85,10 +85,11 @@
         <div id="Contact">
                         <h1>Contact</h1>
                 <div class="icon">
-                        <a href="https://github.com/FATHIA123"><i class="fab fa-github fa-10x"></i></a>
-                        <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin fa-10x"></i></a>
-                        <a href="mailto:mohammedfo5429@gmail.com"><i class="fas fa-at fa-10x"></i></a>   
-                        <a href="https://profiles.generalassemb.ly/profiles/fathia-mohammed"><img id="GAprofile" src="./img/GAProfilepic.png" alt=""></a>   
+                        <a class='logo-text' href="https://github.com/FATHIA123" target="_blank"><i class="fab fa-github fa-10x"></i><h4 >GitHub</h4></a>
+                        
+                        <a class='logo-text' href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin fa-10x"></i><h4 >LinkedIn</h4></a>  
+                        <a class='logo-text' href="mailto:mohammedfo5429@gmail.com" target="_blank"><i class="fab fa-google fa-10x"></i><h4 >Email</h4></a> 
+                        <a class='logo-text' href="https://profiles.generalassemb.ly/profiles/fathia-mohammed" target="_blank"><img id="GAprofile" src="./img/GAProfilepic.png" alt=""><h4 >GA Profile</h4></a>
 
                 </div>      
         </div>
