changed the background picture made the title sationary

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Gochi+Hand" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Cantata+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Kodchasan" rel="stylesheet">
 <body>
         <header>
                 <h2><a href="#top-home">Fathia <span>Mohammed</span></a></h2>
@@ -49,6 +50,8 @@
                   <h1>My Work</h1>
                   <!-- <h3>These are a couple of applications that I am currently working on. These applications are not fully done, however, they will be done shorty </h3> -->
                   <h4>These are a couple of applications that <br>I am currently working on.  They are still in progress...</h4>
+                  <button id="btn"><a id="btn"href="./myWork.html"><h4 >Check Out more of my work</h4></a></button>
+                  
 
                 </div>
                   <div class="div1">
@@ -82,10 +85,16 @@
         <div class="parallax"> </div>
 
         
+        <div class="colortop"> </div>
         <div id="Skills">
-                        <div class="colortop"> </div>
-                <h5>Skills</h5>
-                <h5> JavaScript(ES6) | React | SQL | APIs | Bootstrap | jQuery | Node.JS | MongoDB/Mongoose | PUG | Handlebars | Express | Heroku | Git/GitHub | HTML & CSS | Postman | Python | Django </h5>
+                <h1>Skills</h1>
+               <div id="list"> 
+                       <h3 id="Languages">Languages</h3>
+                       <h3 id="Frameworks">Frameworks/Libraries</h3>
+                       <h3 id="DBs">Database</h3>
+               </div>
+
+                <h5> JavaScript(ES6) | React | SQL | APIs | Bootstrap |<br> jQuery | Node.JS | MongoDB/Mongoose | PUG | Handlebars | <br> | Heroku | Git/GitHub | HTML & CSS | Postman | Python | Django </h5>
         </div>
 
         <div class="colortop"> </div>
@@ -119,6 +128,8 @@
 //     x.style.display = "block";
 //   }
 // }
+
+x.onclick
 </script>
 </body>
 </html>
