--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="top-home">
                         <!-- <div class="colortop"> </div> -->
 
-        <h1 id="name">Hi, I'm Fathia... </h1>
+        <h1 id="name">Hi, I'm Fathia Mohammed... </h1>
         
         <div >
                 <!-- <button class="btn" onclick="myFunction()">About</button> -->
