--- a/myWork.html
+++ b/myWork.html
@@ -35,7 +35,7 @@
                   <hr>
                   <h3>These are a couple of applications that I am currently working on.  
                       <br>
-                      They are still in progress!</h3>
+                      They are still in progress, check them out!</h3>
                   <!-- <h4>These are a couple of applications that <br>I am currently working on.  They are still in progress...</h4>
                   <button id="btn"><a id="btn"href="./myWork.html"><h4 >Check Out more of my work</h4></a></button>
                    -->
