--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="icon">
                                 <a class='logo-text' href="https://github.com/FATHIA123" target="_blank"><i class="fab fa-github fa-10x"></i><h4 >GitHub</h4></a>
                                 
-                                <a class='logo-text' href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin fa-10x"></i><h4 >LinkedIn</h4></a>  
+                                <a class='logo-text' href="https://www.linkedin.com/in/fathia-mohammed/" target="_blank"><i class="fab fa-linkedin fa-10x"></i><h4 >LinkedIn</h4></a>  
                                 <a class='logo-text' href="mailto:mohammedfo5429@gmail.com" target="_blank"><img id="GAprofile" src="./img/mail-black-envelope-symbol.png" alt=""></i><h4 >Email</h4></a> 
                                 <a class='logo-text' href="https://profiles.generalassemb.ly/profiles/fathia-mohammed" target="_blank"><img id="GAprofile" src="./img/GAProfilepic.png" alt=""><h4 >GA Profile</h4></a>
                                 
