added my new projects on the portfolio

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <img src="./img/GA_02_-15.jpg" alt="">
 </div>
-<div class="colortop"> </div>
+<!-- <div class="colortop"> </div> -->
          <div class="parallax"> </div>
 
 <!-- <div class="container" > -->
@@ -90,19 +90,18 @@
 
                 <div class="div2">
                         <div class="project3">  
-                                <a href="./AppChallenge.html" target="_blank"> <img src="./img/trent-erwin-338084-unsplash.jpg" alt=""></a>
+                                <a href="./AppChallenge.html" target="_blank"> <img src="./img/daria-shevtsova-411553-unsplash.jpg" alt=""></a>
                                 <h4>Post Genreal Assembly </h4>
                                 <h4> JavaScript | React </h4>
-                                        <h4>The Fun Budget Tool is <br>
-                                                an easy-to-use <br>
-                                                budgt planning app that<br>
-                                        allows users to track <br>
-                                        their personal finances. <br>
-                                        The app allows users to create <br>
-                                        simple lists of incoming <br>
-                                        revenue and outgoing <br>
-                                        expenses and keep <br>
-                                        track of the balance.</h4>
+                                        <h4>After graduating from   <br>
+                                        General Assembly I embarked  <br>
+                                        on a new journey of creating more <br>
+                                        apps on my own time.<br>
+                                         The Apps in this section are part <br>
+                                         of my Thirty Appchallenge, where I <br>
+                                         am creating 30 Apps using JS & React. <br>
+                                         Take a look by clicking <br>
+                                         on the image above.</h4>
                         </div>
 
                         <!-- <div class="project1">
